--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manual Básico para o GitHub</title>
-    <link rel="icon" type="image/x-icon" href="/docs/images/github.svg">
+    <title>Ingresso na UFT</title>
+    <link rel="icon" type="image/x-icon" href="#">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
-    <link rel="stylesheet" href="./docs/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Manual para o GitHub</a>
+            <a class="navbar-brand" href="#">Ingresso na graduação - UFT</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,6 +42,7 @@
                         <a class="nav-link" href="#Criação de Projetos">Criação de Projetos</a>
                     </li>
                 </ul>
+                <!--
                 <ul class="navbar-nav flex-row">
                     <li class="nav-item">
                         <a class="social-icon" href="https://twitter.com/github"><i class="ri-twitter-line"></i></a>
@@ -56,6 +57,7 @@
                         <a class="social-icon" href="https://www.youtube.com/c/GitHub"><i class="ri-youtube-line"></i></a>
                     </li>
                 </ul>
+                -->
             </div>
         </div>
     </nav>
@@ -65,8 +67,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 class="display-2 fw-bold" data-aos="fade-up">Olá! Esse é o manual do <span class="text-brand">GitHub</span></h1>
-                    <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Feito para auxiliar no acesso ao site</h4>
+                    <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao seu ingresso na <span class="text-brand">graduação</span></h1>
+                    <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Como entrar na UFT</h4>
                     <div data-aos="fade-up" data-aos-delay="200"><a href="#Login no GitHub" class="btn btn-brand">Comece já</a></div>
                 </div>
             </div>
@@ -394,7 +396,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./docs/js/app.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
