--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingresso na UFT</title>
-    <link rel="icon" type="image/x-icon" href="#">
+    <link rel="icon" type="image/x-icon" href="./img/Logo-UFT.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -80,8 +80,134 @@
     </section>
 
 
+
+    <section id="Funções e Comandos" class="section-padding section-connector">
+      <div class="container">
+          <div class="row">
+              <div class="col-12">
+                  <div class="setion-title text-center" data-aos="fade-up" data-aos-delay="100">
+                      <h1>Principais perguntas</h1>
+                      <p>Abaixo está as principais perguntas e dúvidas feitas sobre o assunto, leia com atenção e saiba mais!</p>
+                      <div class="line"></div>
+                  </div>
+              </div>
+          </div>
+          <div class="row gy-4 text-center">
+              <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                  <div class="service py-5 px-4 border">
+                      <div class="service-icon">
+                        <ion-icon name="ticket-outline"></ion-icon>
+                      </div>
+                      <h5 class="mt-4">Quais as formas de ingresso na graduação da UFT?</h5>
+                      <p>#</p>
+                      <a href="https://docs.github.com/pt/get-started/quickstart/create-a-repo" class="custom-link">
+                          <span>Saiba mais</span>
+                          <i class="ri-arrow-right-line"></i>
+                      </a>
+                  </div>
+              </div>
+              <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                  <div class="service py-5 px-4 border">
+                      <div class="service-icon">
+                        <ion-icon name="duplicate-outline"></ion-icon>
+                      </div>
+                      <h5 class="mt-4">Quais os cursos de graduação oferecidos pela UFT?</h5>
+                      <p>#</p>
+                      <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches" class="custom-link">
+                          <span>Saiba mais</span>
+                          <i class="ri-arrow-right-line"></i>
+                      </a>
+                  </div>
+              </div>
+              <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+                  <div class="service py-5 px-4 border">
+                      <div class="service-icon">
+                        <ion-icon name="alert-outline"></ion-icon>
+                      </div>
+                      <h5 class="mt-4">Quais são as modalidades de cotas na UFT?</h5>
+                      <p>#</p>
+                      <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/incorporating-changes-from-a-pull-request/merging-a-pull-request" class="custom-link">
+                          <span>Saiba mais</span>
+                          <i class="ri-arrow-right-line"></i>
+                      </a>
+                  </div>
+              </div>
+              <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                  <div class="service py-5 px-4 border">
+                      <div class="service-icon">
+                          <i class="ri-git-commit-line"></i>
+                      </div>
+                      <h5 class="mt-4">Como funciona a matrícula na UFT?</h5>
+                      <p>#</p>
+                      <a href="https://docs.github.com/pt/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/about-commits" class="custom-link">
+                          <span>Saiba mais</span>
+                          <i class="ri-arrow-right-line"></i>
+                      </a>
+                  </div>
+              </div>
+
+
+
+              <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                <div class="service py-5 px-4 border">
+                    <div class="service-icon">
+                      <ion-icon name="document-text-outline"></ion-icon>
+                    </div>
+                    <h5 class="mt-4">Quais os documentos obrigatórios de matrícula?</h5>
+                    <p>#</p>
+                    <a href="https://docs.github.com/pt/get-started/quickstart/create-a-repo" class="custom-link">
+                        <span>Saiba mais</span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                <div class="service py-5 px-4 border">
+                    <div class="service-icon">
+                      <ion-icon name="cash-outline"></ion-icon>
+                    </div>
+                    <h5 class="mt-4">Quem precisa comprovar renda?</h5>
+                    <p>#</p>
+                    <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches" class="custom-link">
+                        <span>Saiba mais</span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+                <div class="service py-5 px-4 border">
+                    <div class="service-icon">
+                      <ion-icon name="shield-checkmark-outline"></ion-icon>
+                    </div>
+                    <h5 class="mt-4">Como fico sabendo quando será a minha sessão de verificação da autodeclaração étnico-racial?</h5>
+                    <p>#</p>
+                    <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/incorporating-changes-from-a-pull-request/merging-a-pull-request" class="custom-link">
+                        <span>Saiba mais</span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                <div class="service py-5 px-4 border">
+                    <div class="service-icon">
+                      <ion-icon name="sad-outline"></ion-icon>
+                    </div>
+                    <h5 class="mt-4">Se o candidato for Não Homologado na Verificação Presencial, é possível recorrer?</h5>
+                    <p>#</p>
+                    <a href="https://docs.github.com/pt/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/about-commits" class="custom-link">
+                        <span>Saiba mais</span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+            </div>
+          </div>
+      </div>
+  </section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/main.js"></script>
 </body>
