--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
                   <div class="service py-5 px-4 border">
                       <div class="service-icon">
-                          <i class="ri-git-commit-line"></i>
+                        <ion-icon name="id-card-outline"></ion-icon>
                       </div>
                       <h5 class="mt-4">Como funciona a matrícula na UFT?</h5>
                       <p>#</p>
