--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                   <div class="service py-5 px-4 border">
                       <div class="service-icon">
                         <ion-icon name="id-card-outline"></ion-icon>
+
+
                       </div>
                       <h5 class="mt-4">Como funciona a matrícula na UFT?</h5>
                       <p>#</p>
@@ -168,7 +170,7 @@
                     </div>
                     <h5 class="mt-4">Quem precisa comprovar renda?</h5>
                     <p>#</p>
-                    <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches" class="custom-link">
+                    <a href="comprovar_renda.html" class="custom-link">
                         <span>Saiba mais</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
