Teste de páginas

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       </div>
                       <h5 class="mt-4">Quais as formas de ingresso na graduação da UFT?</h5>
                       <p>#</p>
-                      <a href="https://docs.github.com/pt/get-started/quickstart/create-a-repo" class="custom-link">
+                      <a href="./Páginas/formas_ingresso.html" class="custom-link">
                           <span>Saiba mais</span>
                           <i class="ri-arrow-right-line"></i>
                       </a>
@@ -113,7 +113,7 @@
                       </div>
                       <h5 class="mt-4">Quais os cursos de graduação oferecidos pela UFT?</h5>
                       <p>#</p>
-                      <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches" class="custom-link">
+                      <a href="./Páginas/cursos_graduação.html" class="custom-link">
                           <span>Saiba mais</span>
                           <i class="ri-arrow-right-line"></i>
                       </a>
@@ -126,7 +126,7 @@
                       </div>
                       <h5 class="mt-4">Quais são as modalidades de cotas na UFT?</h5>
                       <p>#</p>
-                      <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/incorporating-changes-from-a-pull-request/merging-a-pull-request" class="custom-link">
+                      <a href="./Páginas/modalidade_cotas.html" class="custom-link">
                           <span>Saiba mais</span>
                           <i class="ri-arrow-right-line"></i>
                       </a>
@@ -136,12 +136,10 @@
                   <div class="service py-5 px-4 border">
                       <div class="service-icon">
                         <ion-icon name="id-card-outline"></ion-icon>
-
-
                       </div>
                       <h5 class="mt-4">Como funciona a matrícula na UFT?</h5>
                       <p>#</p>
-                      <a href="https://docs.github.com/pt/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/about-commits" class="custom-link">
+                      <a href="./Páginas/funcionamento_matricula.html" class="custom-link">
                           <span>Saiba mais</span>
                           <i class="ri-arrow-right-line"></i>
                       </a>
@@ -157,7 +155,7 @@
                     </div>
                     <h5 class="mt-4">Quais os documentos obrigatórios de matrícula?</h5>
                     <p>#</p>
-                    <a href="https://docs.github.com/pt/get-started/quickstart/create-a-repo" class="custom-link">
+                    <a href="./Páginas/documentos_matricula.html" class="custom-link">
                         <span>Saiba mais</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
@@ -170,7 +168,7 @@
                     </div>
                     <h5 class="mt-4">Quem precisa comprovar renda?</h5>
                     <p>#</p>
-                    <a href="comprovar_renda.html" class="custom-link">
+                    <a href="./Páginas/comprovar_renda.html" class="custom-link">
                         <span>Saiba mais</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
@@ -183,7 +181,7 @@
                     </div>
                     <h5 class="mt-4">Como fico sabendo quando será a minha sessão de verificação da autodeclaração étnico-racial?</h5>
                     <p>#</p>
-                    <a href="https://docs.github.com/pt/pull-requests/collaborating-with-pull-requests/incorporating-changes-from-a-pull-request/merging-a-pull-request" class="custom-link">
+                    <a href="./Páginas/verificação_autodeclaração.html" class="custom-link">
                         <span>Saiba mais</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
@@ -196,7 +194,7 @@
                     </div>
                     <h5 class="mt-4">Se o candidato for Não Homologado na Verificação Presencial, é possível recorrer?</h5>
                     <p>#</p>
-                    <a href="https://docs.github.com/pt/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/about-commits" class="custom-link">
+                    <a href="./Páginas/candidato_recorrer.html" class="custom-link">
                         <span>Saiba mais</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
