Update nas páginas

--- a/Páginas/funcionamento_matricula.html
+++ b/Páginas/funcionamento_matricula.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funcionamento da matrícula</title>
+    <link rel="icon" type="image/x-icon" href="../img/Logo-UFT.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-    
+
+<body data-bs-spy="scroll" data-bs-target="#navbar">
+
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Ingresso na graduação - UFT</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contato</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Menu
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="#">Ingresso</a></li>
+                                <li><a class="dropdown-item" href="#">Vestibular</a></li>
+                                <li><a class="dropdown-item" href="#">SiSu</a></li>
+                                <li><a class="dropdown-item" href="#">Processo seletivo</a></li>
+                                <li><a class="dropdown-item" href="#">Cotas</a></li>
+                                <li><a class="dropdown-item" href="#">Preto, Pardo, indígena</a></li>
+                                <li><a class="dropdown-item" href="#">Resultados/chamamentos</a></li>
+                                <li><a class="dropdown-item" href="#">Matrícula/Documentação</a></li>
+                                <li><a class="dropdown-item" href="#">Comprovação de renda</a></li>
+                                <li><a class="dropdown-item" href="#">Pessoa com deficiência</a></li>
+                                <li><a class="dropdown-item" href="#">Calouro</a></li>
+                                <li><a class="dropdown-item" href="#">Confirmação interesse</a></li>
+                                <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
+                                <li><a class="dropdown-item" href="#">Simulador Cotas</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">#</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="../js/main.js"></script>
 </body>
+
 </html>
