Alteração nos FAQs

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
   </section>
 
 
+  <!--
   <section id="Ingresso" class="section-padding section-connector">
     <div class="container">
       <div class="row">
@@ -1220,6 +1221,99 @@
 
       </div>
     </div>
+    </div>
+  </section>
+-->
+
+  <section id="Confirmação de interesse" class="section-padding section-connector">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-12">
+          <div class="setion-title text-center" data-aos="fade-up" data-aos-delay="100">
+            <h1>Principais perguntas</h1>
+            <p>Abaixo está as principais perguntas e dúvidas feitas sobre o assunto, leia com atenção e saiba mais!</p>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-container">
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>accordion heading 01</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>accordion heading 02</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>accordion heading 03</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>accordion heading 04</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>accordion heading 05</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>accordion heading 06</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+      </div>
+
     </div>
   </section>
 
