Começando a modificar o FAQs

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
                 <li><a class="dropdown-item" href="#Confirmação de interesse">Confirmação interesse</a></li>
                 <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
-                <li><a class="dropdown-item" href="#">Simulador Cotas</a></li>
+                <li><a class="dropdown-item" href="./Páginas/simulador_cotas.html">Simulador Cotas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -1268,7 +1268,7 @@
 
         <div class="accordion active">
           <div class="accordion-heading">
-            <h3>accordion heading 01</h3>
+            <h3>Quais as formas de ingresso na graduação na UFT?</h3>
             <i class="fas fa-angle-down"></i>
           </div>
           <p class="accordion-content">
@@ -1280,7 +1280,79 @@
 
         <div class="accordion">
           <div class="accordion-heading">
-            <h3>accordion heading 02</h3>
+            <h3>Quais os cursos de graduação oferecidos pela UFT?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>É preciso pagar para estudar na UFT?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como se preparar para a UFT?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>A UFT tem algum cursinho pré-vestibular?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>O candidato pode ocupar vagas obtidas em mais de um processo seletivo de ingresso?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Onde está localizado o ordenamento dos chamamentos da UFT?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Quanto é a mensalidade da UFT na graduação?</h3>
             <i class="fas fa-angle-down"></i>
           </div>
           <p class="accordion-content">
@@ -1314,7 +1386,7 @@
 
           <div class="accordion active">
             <div class="accordion-heading">
-              <h3>accordion heading 01</h3>
+              <h3>Qual o período de inscrições no Vestibular 2023?</h3>
               <i class="fas fa-angle-down"></i>
             </div>
             <p class="accordion-content">
@@ -1326,7 +1398,91 @@
   
           <div class="accordion">
             <div class="accordion-heading">
-              <h3>accordion heading 02</h3>
+              <h3>Como é o vestibular da UFT 2023?</h3>
+              <i class="fas fa-angle-down"></i>
+            </div>
+            <p class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+              consectetur? Nemo!
+            </p>
+          </div>
+
+          <div class="accordion">
+            <div class="accordion-heading">
+              <h3>Quando e como será o Vestibular 2023?</h3>
+              <i class="fas fa-angle-down"></i>
+            </div>
+            <p class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+              consectetur? Nemo!
+            </p>
+          </div>
+
+          <div class="accordion">
+            <div class="accordion-heading">
+              <h3>Qual o período de solicitação de isenção do valor de inscrição no Vestibular 2023?</h3>
+              <i class="fas fa-angle-down"></i>
+            </div>
+            <p class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+              consectetur? Nemo!
+            </p>
+          </div>
+
+          <div class="accordion">
+            <div class="accordion-heading">
+              <h3>Quais são as leituras Obrigatórias do Vestibular 2023?</h3>
+              <i class="fas fa-angle-down"></i>
+            </div>
+            <p class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+              consectetur? Nemo!
+            </p>
+          </div>
+
+          <div class="accordion">
+            <div class="accordion-heading">
+              <h3>O que são as provas de habilitação específica do Vestibular 2023?</h3>
+              <i class="fas fa-angle-down"></i>
+            </div>
+            <p class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+              consectetur? Nemo!
+            </p>
+          </div>
+
+          <div class="accordion">
+            <div class="accordion-heading">
+              <h3>Quais são os cursos mais concorridos do Vestibular?</h3>
+              <i class="fas fa-angle-down"></i>
+            </div>
+            <p class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+              consectetur? Nemo!
+            </p>
+          </div>
+
+          <div class="accordion">
+            <div class="accordion-heading">
+              <h3>Como é calculada a pontuação do candidato no vestibular?</h3>
+              <i class="fas fa-angle-down"></i>
+            </div>
+            <p class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+              consectetur? Nemo!
+            </p>
+          </div>
+
+          <div class="accordion">
+            <div class="accordion-heading">
+              <h3>A UFT possui Vestibular de Inverno?</h3>
               <i class="fas fa-angle-down"></i>
             </div>
             <p class="accordion-content">
@@ -1360,7 +1516,7 @@
 
         <div class="accordion active">
           <div class="accordion-heading">
-            <h3>accordion heading 01</h3>
+            <h3>Como funciona o SiSu?</h3>
             <i class="fas fa-angle-down"></i>
           </div>
           <p class="accordion-content">
@@ -1372,7 +1528,43 @@
 
         <div class="accordion">
           <div class="accordion-heading">
-            <h3>accordion heading 02</h3>
+            <h3>Quando acontecce a seleção para o SiSu?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Quantas vagas a UFT oferece para ingresso via SiSu?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Onde ocultar cursos e vagas ofertadas pelo SiSu?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como o candidato aprovado no SiSu faz o primeiro acesso no Portal do Cnadidato da UFT?</h3>
             <i class="fas fa-angle-down"></i>
           </div>
           <p class="accordion-content">
