--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 Menu
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item" href="#Principais Perguntas">Principais Perguntas</a></li>
                 <li><a class="dropdown-item" href="#Ingresso">Ingresso</a></li>
                 <li><a class="dropdown-item" href="#Vestibular">Vestibular</a></li>
                 <li><a class="dropdown-item" href="#SiSu">SiSu</a></li>
@@ -86,7 +87,7 @@
 
 
 
-  <section id="Funções e Comandos" class="section-padding section-connector">
+  <section id="Principais Perguntas" class="section-padding section-connector">
     <div class="container">
       <div class="row">
         <div class="col-12">
