--- a/Páginas/modalidade_cotas.html
+++ b/Páginas/modalidade_cotas.html
@@ -15,9 +15,11 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
+
+
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Ingresso na graduação - UFT</a>
+            <a class="navbar-brand" href="../index.html">Ingresso na graduação - UFT</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -39,24 +41,32 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="#">Ingresso</a></li>
-                                <li><a class="dropdown-item" href="#">Vestibular</a></li>
-                                <li><a class="dropdown-item" href="#">SiSu</a></li>
-                                <li><a class="dropdown-item" href="#">Processo seletivo</a></li>
-                                <li><a class="dropdown-item" href="#">Cotas</a></li>
-                                <li><a class="dropdown-item" href="#">Preto, Pardo, indígena</a></li>
-                                <li><a class="dropdown-item" href="#">Resultados/chamamentos</a></li>
-                                <li><a class="dropdown-item" href="#">Matrícula/Documentação</a></li>
-                                <li><a class="dropdown-item" href="#">Comprovação de renda</a></li>
-                                <li><a class="dropdown-item" href="#">Pessoa com deficiência</a></li>
-                                <li><a class="dropdown-item" href="#">Calouro</a></li>
-                                <li><a class="dropdown-item" href="#">Confirmação interesse</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Principais Perguntas">Principais Perguntas</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Ingresso">Ingresso</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Vestibular">Vestibular</a></li>
+                                <li><a class="dropdown-item" href="../index.html#SiSu">SiSu</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Processo seletivo">Processo
+                                        seletivo</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Cotas">Cotas</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Pretos, Pardos e indígenas">Preto,
+                                        Pardo, indígena</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../index.html#Resultado e chamamentos">Resultados/chamamentos</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../index.html#Matrícula e documentação">Matrícula/Documentação</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Comprovação de renda">Comprovação de
+                                        renda</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Pessoas com deficiência">Pessoa com
+                                        deficiência</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Calouro">Calouro</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Confirmação de interesse">Confirmação
+                                        interesse</a></li>
                                 <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
-                                <li><a class="dropdown-item" href="#">Simulador Cotas</a></li>
+                                <li><a class="dropdown-item" href="./simulador_cotas.html">Simulador Cotas</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">#</a></li>
+                                <li><a class="dropdown-item" href="../index.html">Voltar ao início</a></li>
                             </ul>
                         </li>
                     </ul>
